# talks

./: README.md
2018/obedy/: index.html
2018/obedy/css/: reveal.css
2019/avast-cpp/code/: CMakeLists.txt  cpuscaling.sh  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  hyperthreading.sh
2019/avast-cpp/slides/: avast.tex
2019/meeting-cpp/: README.md  branch_prediction.py  cache_conflicts.py  denormals.py  requirements.txt  slides.py  utils.py
2019/rust/: README.md  part1.py  part2.py  part3.py  part4.py  slides.py  utils.py
2023/techmeetup-rust/: README.md  analyse.py  ergonomics.py  history.py  performance.py  reliability.py  requirements.txt  sections.py  slides.py
2023/techmeetup-rust/data/: crate-downloads-per-month.csv  crates-per-month.csv  downloads.csv  rust-stars.csv
2024/einfra/hyperqueue/: README.md  challenges.py  config.py  slides.py  tasks.py  utils.py
2024/europython/writing-python-like-its-rust/: README.md  config.py  requirements.txt  slides.py  soundness.py  type_hints.py  utils.py
2024/rust-ostrava/rust-intro-live-demo/: README.md  analyse.py  requirements.txt  slides.py
2024/rust-prague/rust-community-events/: README.md  slides.py  utils.py
2024/rust-prague/rust-governance/: README.md  config.py  governance.md  history.py  slides.py
2024/rustnl/state-of-rust/: README.md  config.py  requirements.txt  (+3 more)
2025/techmeetup-rust/: README.md  config.py  deployment.py  development.py  governance.py  history.py  maintenance.py  notes.md  open_source.py  slides.py  utils.py
meeting-cpp-2019/: false_sharing.py
(+65 files in other folders)
